Improved confirmation message on deleting groups

--- a/app/views/assignments/group/_table_body.html.haml
+++ b/app/views/assignments/group/_table_body.html.haml
@@ -5,7 +5,7 @@
     %td
       .right
         %ul.button-bar
-          %li= link_to "Review #{term_for :group}", review_groups_path(:id => group_presenter.group), :class => 'button'
+          %li= link_to "Review #{term_for :group}", edit_group_path(:id => group_presenter.group), :class => 'button'
           - if group_presenter.submission
             %li= link_to "See Submission", assignment_submission_path(group_presenter.assignment, id: group_presenter.submission.id, group_id: group_presenter.group.id), :class => 'button'
           - elsif presenter.assignment.accepts_submissions?
