--- a/app/views/submissions/_assignment_guidelines.haml
+++ b/app/views/submissions/_assignment_guidelines.haml
@@ -3,8 +3,12 @@
 - else
   .italic.not_bold= "#{points assignment.point_total} points possible"
 %br
-.italic.not_bold= "Opens: #{assignment.open_at}" if assignment.open_at?
-.italic.not_bold= "Due: #{assignment.due_at}" if assignment.due_at?
+- if assignment.open_at?
+  .italic.not_bold= "Opens: #{assignment.open_at}"
+
+- if assignment.due_at?
+  .italic.not_bold= "Due: #{assignment.due_at}"
+
 - if assignment.description.present?
   %hr.dotted
 
