Display if a submission is a resubmission

--- a/app/views/submissions/_form.html.haml
+++ b/app/views/submissions/_form.html.haml
@@ -10,6 +10,11 @@
   - elsif presenter.assignment.is_individual?
     = f.input :student_id, :input_html => { :value => presenter.student.id }, :as => :hidden
 
+  - if presenter.submission.graded?
+    %section
+      .italic.not_bold= "Graded: #{presenter.submission.graded_at}"
+      %span.label.alert Resubmission!
+
   %section
     - if presenter.assignment.accepts_attachments
       %h4 Attachments
