--- a/app/views/grades/_standard_edit.html.haml
+++ b/app/views/grades/_standard_edit.html.haml
@@ -15,7 +15,7 @@
     %hr.dotted
     = simple_form_for @grade, url: assignment_grade_path(@assignment), method: :patch do |f|
       = hidden_field_tag :student_id, current_student.id
-      = hidden_field_tag :instructor_modified, true
+      = f.hidden_field :submission_id, value: @submission.try(:id)
 
       #grade(ng-controller="GradeCtrl" ng-init="init(#{@serialized_init_data})")
         .panel.splash(ng-cloak) Loading grade for #{@student.name}...
