--- a/app/views/assignments/_buttons.html.haml
+++ b/app/views/assignments/_buttons.html.haml
@@ -18,12 +18,19 @@
       // THIS IS WHERE THE SUBMISSION EXPORT WILL START
       %li
         - if presenter.team
-          %a{:href => assignment_exports_team_submissions_path(presenter.assignment, :team_id => presenter.team, format: 'zip') }
+          = form_tag assignment_exports_path, :method => :post do
+            = hidden_field_tag "assignment_id", presenter.assignment.id
+            = hidden_field_tag "team_id", presenter.team.id
             .fa.fa-file-zip-o.fa-fw
-            Download Team Submissions
+            = button_tag "Export Team Submissions"
+
         - if ! presenter.team
-          %a{:href => assignment_exports_submissions_path(presenter.assignment, format: 'zip') }
+          = form_tag assignment_exports_path, :method => :post do
+            = hidden_field_tag "assignment_id", presenter.assignment.id
             .fa.fa-file-zip-o.fa-fw
+            = button_tag "Export Submissions"
+
+          %a{:href => assignment_exports_submissions_path(presenter.assignment, format: 'zip') }
             Download Submissions
 
       %li
@@ -42,11 +49,6 @@
           - else
             Create Rubric
       %li
-
-        .fa.fa-sliders.fa-fw
-          = form_tag assignment_exports_path, :method => :post do
-            = hidden_field_tag "assignment_id", presenter.assignment.id
-            = button_tag "Export"
 
       - if presenter.rubric_designed?
         - if presenter.has_reviewable_grades?
