--- a/app/views/exports/index.html.haml
+++ b/app/views/exports/index.html.haml
@@ -20,7 +20,7 @@
         %th Status
         %th
     %tbody
-      - @assignment_exports.each do |export|
+      - @submissions_exports.each do |export|
         %tr
           %td
             = link_to export.assignment.name, assignment_path(export.assignment)
