--- a/app/views/layouts/navigation/_staff_subnav_links.haml
+++ b/app/views/layouts/navigation/_staff_subnav_links.haml
@@ -31,7 +31,7 @@
   %li= link_to_unless_current raw("<i class='fa fa-shield fa-fw'></i> Awarded #{current_course.badge_term} Chart"), earned_badges_path
 
 %li
-  = link_to_unless_current raw('<i class="fa fa-list-ol fa-fw"></i> Exports'), exports_path
+  = link_to_unless_current raw('<i class="fa fa-file-archive-o fa-fw"></i> Submission Downloads'), exports_path
 
 %hr
 
