fix some stragglers

--- a/app/views/exports/index.html.haml
+++ b/app/views/exports/index.html.haml
@@ -45,4 +45,4 @@
           %td
             .right
               %ul.button-bar
-                %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), export, :class => 'button', :data => { confirm: 'This will delete the assignment export. Are you sure?' }, :method => :delete
+                %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), export, :class => 'button', :data => { confirm: 'This will delete the submissions export. Are you sure?' }, :method => :delete
