Rename Assignment Exports to Submissions Exports on exports index

--- a/app/views/exports/index.html.haml
+++ b/app/views/exports/index.html.haml
@@ -5,7 +5,7 @@
 .pageContent
   = render 'layouts/alerts'
 
-  %h2 Assignment Exports
+  %h2 Submissions Exports
   %br 
   %table.nofeatures_default_last_name_dynatable
     %thead
