--- a/app/views/students/syllabus/_assignment_icons.haml
+++ b/app/views/students/syllabus/_assignment_icons.haml
@@ -9,14 +9,24 @@
   .display_on_hover.hover-style
     This #{term_for :assignment} is required!
 - if assignment.is_unlockable?
-  %a
-    %i.fa.fa-lock
-  .display_on_hover.hover-style
-    %h3 This #{term_for :assignment} is Locked
-    .small.italic In order to unlock it you must:
-    %ul
-      - assignment.unlock_conditions.each do |condition|
-        %li= condition.requirements_description_sentence
+  - if ! assignment.is_unlocked_for_student?(current_student)
+    %a
+      %i.fa.fa-lock
+    .display_on_hover.hover-style
+      %h3 This #{term_for :assignment} is Locked
+      .small.italic In order to unlock it you must:
+      %ul
+        - assignment.unlock_conditions.each do |condition|
+          %li= condition.requirements_description_sentence
+  - else
+    %a
+      %i.fa.fa-unlock
+    .display_on_hover.hover-style
+      %h3 You have unlocked this #{term_for :assignment}
+      .small.italic To achieve this you:
+      %ul
+        - assignment.unlock_conditions.each do |condition|
+          %li= condition.requirements_completed_sentence
 - if assignment.is_a_condition?
   %a
     %i.fa.fa-key
