Use the submitted at timestamp for the successful updated submission mailer

--- a/app/views/notification_mailer/updated_submission.html.haml
+++ b/app/views/notification_mailer/updated_submission.html.haml
@@ -48,7 +48,7 @@ border: 1px solid #f0f0f0;
 }
 
 table.footer-wrap {
-width: 100%;  
+width: 100%;
 clear: both!important;
 }
 
@@ -151,7 +151,7 @@ width: 100%;
 </p>
 <h2 align="center"><strong>Congratulations #{ @user.first_name }!</strong></h2>
 
-<h3 align="center">You successfully updated your submission for #{ @assignment.name } on #{ @submission.created_at }. </h3>
+<h3 align="center">You successfully updated your submission for #{ @assignment.name } on #{ @submission.submitted_at }. </h3>
 <p>
 <hr />
 </p>
