add submissions export mailer specs

--- a/app/views/exports_mailer/team_submissions_export_success.html.haml
+++ b/app/views/exports_mailer/team_submissions_export_success.html.haml
@@ -12,6 +12,11 @@
 %p{:align => "center"}
   You can download your completed ZIP archive
   = succeed "." do
+    %a{:href => "#{ @submissions_export.presigned_s3_url }"} here
+
+%p{:align => "center"}
+  Alternatively you can download the submissions archive on the submissions downloads page
+  = succeed "." do
     %a{:href => "#{ exports_url }"} here
 %hr/
 
