--- a/app/views/exports_mailer/submissions_export_success.html.haml
+++ b/app/views/exports_mailer/submissions_export_success.html.haml
@@ -4,10 +4,15 @@
 %h2{:align => "center"}
   %strong Dear #{ @professor.first_name },
 
-%h3{:align => "center"} Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" was successfully created for course #{ @course.name }.
+%h3{:align => "center"} Your requested submissions export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" was successfully created for course #{ @course.name }.
 %p
 %p{:align => "center"}
   You can download your completed ZIP archive
+  = succeed "." do
+    %a{:href => "#{ @submissions_export.presigned_s3_url }"} here
+
+%p{:align => "center"}
+  Alternatively you can download the submissions archive on the submissions downloads page
   = succeed "." do
     %a{:href => "#{ exports_url }"} here
 %hr/
