--- a/app/views/exports_mailer/submissions_export_success.text.haml
+++ b/app/views/exports_mailer/submissions_export_success.text.haml
@@ -2,7 +2,9 @@ Dear #{ @professor.first_name },
 
 Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" was successfully created for course #{ @course.name }.
 
-You can download your completed ZIP archive here: #{ exports_url }.
+You can download your completed ZIP archive here: #{ @submissions_export.presigned_s3_url }.
+
+Alternatively you can download the submissions archive on the submissions downloads page here: #{ exports_url }.
 
 Sincerely,
 The GradeCraft Team
