Initial styles for the timeline in Sass format

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,6 +70,7 @@ $media-xlarge-max:  120rem; //
 @import 'grades';
 @import 'badges';
 @import 'grid';
+@import 'history_timeline';
 @import 'homepage';
 @import 'icons';
 @import 'login';
